--- a/.gitignore
+++ b/.gitignore
@@ -112,6 +112,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+myenv/
 
 # Spyder project settings
 .spyderproject
@@ -137,3 +138,6 @@ dmypy.json
 
 # .DS_Store files
 .DS_Store
+
+# static files
+static/
